; ModuleID = '/home/carl/AnghaBench/linux/drivers/video/fbdev/nvidia/extr_nv_setup.c_NVReadCrtc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/video/fbdev/nvidia/extr_nv_setup.c_NVReadCrtc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvidia_par = type { i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @NVReadCrtc(%struct.nvidia_par* %0, i32 %1) #0 {
  %3 = alloca %struct.nvidia_par*, align 8
  %4 = alloca i32, align 4
  store %struct.nvidia_par* %0, %struct.nvidia_par** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.nvidia_par*, %struct.nvidia_par** %3, align 8
  %6 = getelementptr inbounds %struct.nvidia_par, %struct.nvidia_par* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 8
  %8 = load %struct.nvidia_par*, %struct.nvidia_par** %3, align 8
  %9 = getelementptr inbounds %struct.nvidia_par, %struct.nvidia_par* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = add nsw i64 %10, 4
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @VGA_WR08(i32 %7, i64 %11, i32 %12)
  %14 = load %struct.nvidia_par*, %struct.nvidia_par** %3, align 8
  %15 = getelementptr inbounds %struct.nvidia_par, %struct.nvidia_par* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  %17 = load %struct.nvidia_par*, %struct.nvidia_par** %3, align 8
  %18 = getelementptr inbounds %struct.nvidia_par, %struct.nvidia_par* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = add nsw i64 %19, 5
  %21 = call i32 @VGA_RD08(i32 %16, i64 %20)
  ret i32 %21
}

declare dso_local i32 @VGA_WR08(i32, i64, i32) #1

declare dso_local i32 @VGA_RD08(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
